RESOLVED FIXED185126
LICM shouldn't hoist nodes if hoisted nodes exited in that code block
https://bugs.webkit.org/show_bug.cgi?id=185126
Summary LICM shouldn't hoist nodes if hoisted nodes exited in that code block
Filip Pizlo
Reported 2018-04-29 18:05:00 PDT
We allow speculative hoisting, but only once per codeBlock.
Attachments
the patch (3.10 KB, patch)
2018-04-29 18:14 PDT, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2018-04-29 18:14:58 PDT
Created attachment 339102 [details] the patch
Saam Barati
Comment 2 2018-04-30 09:21:00 PDT
Comment on attachment 339102 [details] the patch r=me
Filip Pizlo
Comment 3 2018-04-30 17:05:02 PDT
Radar WebKit Bug Importer
Comment 4 2018-04-30 17:08:04 PDT
Note You need to log in before you can comment on or make changes to this bug.